# JournalCraftCrew

./: .env  .env.archon  .env.dynamic  .env.homeserver  .flake8  .gitignore  AGENT_WORKFLOW_DIAGRAM.md  API_WEBUI_CONNECTION_MAP.md  CLAUDE_TOOLS_RESEARCH.md  COMMERCIALIZATION_PLAN.md  COMMERCIAL_LICENSE.md  COMPREHENSIVE_BUTTON_LINK_ANALYSIS.md  COMPREHENSIVE_IMPLEMENTATION_PROPOSAL.md  CREWAI_IMPLEMENTATION_SUCCESS.md  CREWAI_MASTER_SPEC.md  DEPENDENCY_VULNERABILITY_REMEDIATION_PROPOSAL.md  DEPLOYMENT.md  DEPLOYMENT_MCP_ANALYSIS.md  DEPLOYMENT_PLATFORM_ANALYSIS.md  DEV_AGENT_GROUPING_PLAN.md  EMERGENCY_SECURITY_ASSESSMENT_REPORT.md  FEATURE_SNAPSHOT.json  FRAGMENTED_SYSTEM_ASSESSMENT.md  FRONTEND_INTEGRATION_COMPLETE.md  IMPLEMENTATION_GAP_REPORT.md  IMPLEMENTATION_SUMMARY.md  JOURNAL_CONTENT_BUILD_FLOW_REPORT.md  JOURNAL_CONTENT_CREWAI_DESIGN.md  JWT_ATOB_FIX_LOG.md  LICENSE  MASTER_DEVELOPMENT_ROADMAP.md  NEXT_PHASE_PROPOSAL.md  OPENSPEC_ALIGNMENT_COMPLETE.md  OPENSPEC_COMPLIANT_DOCUMENTATION_PROPOSAL.md  OPTIMIZED_CREWAI_PROPOSAL.md  ORCHESTRATOR_DASHBOARD_DESIGN.md  PHASE1_WEB_UI_IMPLEMENTATION_PLAN.md  PHASE2_COMPLETION_UPDATE.md  PROJECT_CLEANUP_ANALYSIS.md  PROPOSAL_UPDATE_PHASE1_COMPLETE.md  (+66 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
agents/: content_curator_agent.py  discovery_agent.py  editor_agent.py  manager_agent.py  media_agent.py  onboarding_agent.py  pdf_builder_agent.py  research_agent.py
config/: settings.py
crews/: phase1_crew.py
deploy/: cloudflare-setup.md  gcp-cloudflare-deploy.sh  gcp-deployment.sh  nginx-homeserver.conf  nginx-sites.conf  redis.conf
developmentlogs/: session1_log.txt  session2_log.txt  session3_log.txt
journal-platform-backend/: .env.example  .env.production  .env.template  .gitignore  ARCHON_DEVELOPMENT_ASSISTANT_COMPLETE.md  Dockerfile  Dockerfile.prod  OPENSPEC_REGISTRATION_FIXES_SUMMARY.md  README.md  SECURITY_SETUP.md  TASK_1_3_COMPLETION_SUMMARY.md  TESTING_SUMMARY.md  UNIFIED_BACKEND_API.md  app.txt  archon_tasks.json  backend_vulnerabilities.csv  dev_assistant_cli.py  (+21 more)
(+359 files in other folders)
