[project]
name = "temp_course_craft"
version = "0.1.0"
description = "temp_course_craft using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
temp_course_craft = "temp_course_craft.main:run"
run_crew = "temp_course_craft.main:run"
train = "temp_course_craft.main:train"
replay = "temp_course_craft.main:replay"
test = "temp_course_craft.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
