[project]
name = "journal-craft-crew"
version = "0.1.0"
description = "Journal Craft Crew - AI-powered journaling project"
requires-python = ">=3.10"
dependencies = [
    "zhipuai",
    "python-dotenv",
    "requests>=2.32.4",
    "fastapi>=0.109.1",
    "starlette>=0.40.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.7",
    "transformers>=4.53.0",
    "langchain-community>=0.3.27",
    "langchain-text-splitters>=0.3.9",
    "pypdf>=6.1.3",
    "pdfminer-six>=20251107",
    "reportlab>=4.3.1",
    "aiohttp>=3.12.14",
    "h11>=0.16.0",
    "h2>=4.3.0",
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
    "openai>=1.65.2",
]

[tool.uv.workspace]
members = ["journal-platform-backend/security_fix_env"]

[dependency-groups]
dev = [
    "pip-audit>=2.9.0",
]
